--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ footer .content  .link-boxes{
     padding: 0 10px;
 }
 .box h4{
-    font-size: 22px;
+    font-size: max(16px, 1.2vw);
     color: #ffffff;
     margin-bottom: 20px;
     margin-top: 20px;
@@ -403,7 +403,7 @@ footer .content  .link-boxes{
     margin: 6px 0;
 }
 .box ul li a{
-    font-size: 16px;
+    font-size: max(14px, 0.8vw);
     text-transform: capitalize;
     color: #ffffff;
     text-decoration: none;
@@ -419,7 +419,7 @@ footer .content  .link-boxes{
 .box .form-sub input{
     width: 100%;
     padding: 10px;
-    font-size: 15px;
+    font-size: max(14px, 0.8vw);
     outline: none;
     border: 1px solid #ffffff;
     color: #ffffff;
@@ -432,14 +432,14 @@ footer .content  .link-boxes{
     width: 100%;
     margin-top: 10px;
     padding: 10px; 
-    font-size: 17px;
+    font-size: max(14px, 0.8vw);
     outline: none;
     border: none;
     cursor: pointer;
     color: #3c3c3c;
     border-radius: 3px;
     font-weight: bold;
-    background-color: #ffffff;        
+    background-color: #fff;        
 }
 
 footer .bottom-details{
@@ -455,9 +455,9 @@ footer .bottom-details .bottom_text{
 }
 .bottom-details .bottom_text span,
 .bottom-details .bottom_text a{
-    font-size: 14px;
+    font-size: max(14px, 0.8vw);
     font-weight: 300;
-    color: #ffffff;
+    color: #fff;
     opacity: 0.8;
     text-decoration: none;
 }
