--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,11 @@ footer .content  .link-boxes{
     text-decoration: underline;
 }
 
+.box .form-sub label{
+    color: #ffffff;
+    font-size: max(14px, 0.8vw);
+}
+
 .box .form-sub input{
     width: 100%;
     padding: 10px;
