--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,17 @@ html{
     justify-content: center;
     height: 100vh;
     background-color: #fffafa;
+    background-image: url(../img/background-parallax.png);
+    position: relative;
+    overflow: hidden;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+
 }
 
 .home-content{
@@ -215,6 +226,16 @@ html{
     align-items: center;
     justify-content: center;
     background-color: #fffafa;
+    background-image: url(../img/background-parallax.png);
+    position: relative;
+    overflow: hidden;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 .card h2{
