--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ html{
     justify-content: center;
     height: 100vh;
     background-color: #fffafa;
-    background-image: url(../img/background-parallax.png);
+    /*background-image: url(../img/background-parallax.png);
     position: relative;
     overflow: hidden;
     background-position: 50% 50%;
@@ -75,7 +75,7 @@ html{
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-
+    */
 }
 
 .home-content{
