--- a/css/style.css
+++ b/css/style.css
@@ -17,20 +17,19 @@ html {
     scroll-behavior: smooth;
 }
 
-.cabecalho {
+.header {
     background-color: #0077B5;
+    padding: 30px 0;
 }
 
-.cabecalho-img {
+.header-logo {
     width: 5%;
     max-width: 700px;
-    margin: 30px;
     filter: invert(100%);
 }
 
 .logo-responsive {
     display: none;
-
 }
 
 .header-items {
@@ -40,20 +39,37 @@ html {
     justify-content: space-around;
 }
 
-.cabecalho-menu {
+.header-menu {
     display: flex;
     gap: 60px;
 }
 
-.cabecalho-menu-item {
+.header-menu-item {
     color: #ffffff;
-    font-weight: 400px;
+    font-weight: 400;
     font-size: max(16px, 1.5vw);
 }
 
-.cabecalho-menu-item:hover {
+.header-menu-item:hover {
     opacity: 1;
     text-decoration: underline;
+}
+
+.btn-outline {
+    background: 0 0;
+    color: #fff;
+    border: 2px solid #fff;
+    padding: 10px 30px;
+    text-transform: uppercase;
+}
+
+.btn-primary {
+    background: #ffffff;
+    color: #0077B5;
+    border: 0;
+    padding: 10px 30px;
+    font-weight: 800;
+    text-transform: uppercase;
 }
 
 /* Responsividade */
@@ -63,18 +79,21 @@ html {
         width: 50%;
         margin-bottom: 30px;
     }
+
+    .btn-primary,
+    .btn-outline {
+        display: none;
+    }
 }
 
 @media (max-width: 630px) {
-
-
     .box {
         width: 100%;
     }
 
-    .cabecalho {
+    .header {
         height: 9vh;
-        padding: 0 24px 0 24px;
+        padding: 0 24px;
         border-bottom-left-radius: 1%;
         border-bottom-right-radius: 1%;
     }
@@ -88,7 +107,6 @@ html {
         display: flex;
         align-items: center;
         justify-content: space-between;
-
     }
 
     .logo-responsive {
@@ -102,9 +120,7 @@ html {
         margin-top: 2vh;
     }
 
-    .one,
-    .two,
-    .three {
+    .toggle-line {
         background-color: #fff;
         height: 2px;
         width: 60%;
@@ -123,7 +139,6 @@ html {
 
     .footer {
         display: flex;
-
     }
 
     .copy-responsive {
@@ -134,7 +149,7 @@ html {
         font-weight: 400;
         font-size: max(14px, 1vw);
         gap: 10px;
-        margin: 10px 0 10px 0;
+        margin: 10px 0;
         color: #ffffff;
     }
 
@@ -142,69 +157,66 @@ html {
         margin: 0;
     }
 
-    /*fullscren*/
+    /*fullscreen*/
 
     .logo-responsive.off {
-        opacity: 0%;
+        opacity: 0;
     }
 
     .home.on {
         margin-top: 100vh;
     }
 
-    .cabecalho.on {
+    .header.on {
         position: absolute;
         top: 0;
         left: 0;
-
         width: 100vw;
         height: 100vh;
-
         z-index: 10;
         justify-content: center;
         align-items: center;
     }
 
-    .cabecalho.on .cabecalho-img {
+    .header.on .header-logo {
         width: 15%;
     }
 
-    .cabecalho.on .header-items {
+    .header.on .header-items {
         display: flex;
         flex-direction: column;
         margin-top: 25vh;
     }
 
-    .cabecalho.on .cabecalho-menu {
+    .header.on .header-menu {
         display: flex;
         flex-direction: column;
         line-height: 1rem;
         text-align: center;
     }
 
-    .cabecalho-menu-item {
+    .header-menu-item {
         font-size: 5vw;
     }
 
-    .cabecalho.on .menu-toggle {
+    .header.on .menu-toggle {
         position: absolute;
         right: -6vw;
         margin-right: 10vw;
         top: 3vh;
     }
 
-    .cabecalho.on .menu-toggle .one {
+    .header.on .menu-toggle .one {
         transform: rotate(45deg) translate(7px, 7px);
     }
 
-    .cabecalho.on .menu-toggle .two {
+    .header.on .menu-toggle .two {
         opacity: 0;
     }
 
-    .cabecalho.on .menu-toggle .three {
+    .header.on .menu-toggle .three {
         transform: rotate(-45deg) translate(3px, -4px);
     }
-
 }
 
 @media (max-width: 480px) {
