--- a/css/home.css
+++ b/css/home.css
@@ -33,11 +33,13 @@
 }
 
 .heading-primary {
-    font-size: max(24px, 3vw);
+    font-size: max(24px, 4vw);
     text-transform: uppercase;
     letter-spacing: 4px;
+    font-weight: 600;
     text-align: center; 
     color: #000;
+    margin: 0px;
 }
 
 .heading-primary span{
@@ -46,7 +48,7 @@
 
 .text-primary {
     color: #000;
-    font-size: max(18px, 1.5vw);
+    font-size: max(14px, 2.47vw);
     text-align: center;
     line-height: 5vh; 
 }
@@ -61,7 +63,7 @@
     border: 0 solid #E5E7EB;
     box-sizing: border-box;
     color: #fff;
-    font-size: max(12px, 1.5vw);
+    font-size: max(12px, 1.52vw);
     text-transform: uppercase;
     justify-content: center;
     line-height: 1.75rem;
