"Melhorias na responsividade das fontes
Esta atualização concentra-se na melhoria da responsividade das fontes em diferentes dispositivos. Para alcançar isso, utilizei uma estrutura que permite que as fontes se ajustem dinamicamente de acordo com o tamanho da viewport, proporcionando uma experiência de leitura mais consistente e agradável em telas de diferentes tamanhos.

--- a/css/contact.css
+++ b/css/contact.css
@@ -10,7 +10,7 @@
 
 .heading-contact{
     margin-bottom: 7vh;
-    font-size: max(18px, 2.47vw);
+    font-size: calc(1.120rem + 0.7vw);
     text-transform: uppercase;
     letter-spacing: 10px;
     text-align: center; 
