--- a/css/cards.css
+++ b/css/cards.css
@@ -25,13 +25,13 @@
 
 .card p{
     color: #000;
-    font-size: max(16px, 1vw);
+    font-size: calc(0.7rem + 0.4vw);
     text-align: center;
     margin: 1vh;
 }
 
 .cards-primary {
-    font-size: max(18px, 2.47vw);
+    font-size: calc(1.120rem + 0.7vw);
     text-align: center; 
     color: #000;
     margin-top: 7vh;
@@ -72,3 +72,28 @@
   .image-card {
     width: 100%;
   }
+
+  .card-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+    padding: 10px;
+    margin: 20px;
+  }
+
+  .card-text h2{
+    font-size:  calc(1.7rem + 1vw);
+    color: #000;
+    text-align: center;
+
+}
+
+.card-text p{
+    color: #000;
+    font-size:  calc(1rem + 0.6vw);
+    text-align: center;
+    margin: 1vh;
+    text-align: center;
+}
