--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,7 @@ html {
 }
 
 .header-logo {
-    width: 5%;
-    max-width: 700px;
+    width: 3%;
     filter: invert(100%);
 }
 
@@ -46,8 +45,9 @@ html {
 
 .header-menu-item {
     color: #ffffff;
-    font-weight: 400;
-    font-size: max(16px, 1.5vw);
+    font-weight: 600;
+    font-size:  calc(0.6rem + 0.5vw);
+    padding: 10px;
 }
 
 .header-menu-item:hover {
