--- a/css/cards.css
+++ b/css/cards.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #fffafa;
+    background-color: var(--bg-primary);
     /*background-image: url(../img/background-parallax.png);
     position: relative;
     overflow: hidden;
@@ -20,20 +20,20 @@
 
 .card h2{
     margin-top: 2vh;
-    color: #000;
+    color: var(--collor-primary);
 }
 
 .card p{
     color: #000;
-    font-size: calc(0.7rem + 0.4vw);
+    font-size: var(--fs-3);
     text-align: center;
     margin: 1vh;
 }
 
 .cards-primary {
-    font-size: calc(1.120rem + 0.7vw);
+    font-size: var(--fs-2);
     text-align: center; 
-    color: #000;
+    color: var(--collor-primary);
     margin-top: 7vh;
 }
 
@@ -61,7 +61,7 @@
     margin: 20px;
     transition: all 0.3s ease-out;
     border-bottom: 35px solid #0077B5;
-    background-color: #fff;
+    background-color: var(--bg-primary);
   }
   
   .card:hover {
@@ -84,15 +84,15 @@
   }
 
   .card-text h2{
-    font-size:  calc(1.7rem + 1vw);
+    font-size:  var(--fs-2);
     color: #000;
     text-align: center;
 
 }
 
 .card-text p{
-    color: #000;
-    font-size:  calc(1rem + 0.6vw);
+    color: var(--collor-primary);
+    font-size:  var(--fs-4);
     text-align: center;
     margin: 1vh;
     text-align: center;
