--- a/css/contact.css
+++ b/css/contact.css
@@ -5,12 +5,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #171818;
+    background-color: var(--bg-secondary);
 }
 
 .heading-contact{
     margin-bottom: 7vh;
-    font-size: calc(1.120rem + 0.7vw);
+    font-size: var(--fs-2);
     text-transform: uppercase;
     letter-spacing: 10px;
     text-align: center; 
@@ -23,7 +23,7 @@
     align-items: center;
     gap: 10vw;
     flex-wrap: wrap;
-    width: 65vw;
+    width: 75vw;
     margin: 7vh 0 7vh 0;
 }
 
@@ -41,13 +41,13 @@
 }
 
 .contact-icons h2{
-    color: #fff;
-    font-size: max(16px, 1.2vw);
+    color: var(--color-secondary);
+    font-size: var(--fs-4);
 }
 
 .contact-icons p{
-    color: #fff;
-    font-size: max(14px, 0.7vw);
+    color: var(--color-secondary);
+    font-size: var(--fs-5);
 }
 
 .contact-icons a{
@@ -56,17 +56,17 @@
     height: max(40px, 6vw);
     border-radius: 50%;
     text-align: center;
-    color: #ffffff;
+    color: var(--color-secondary);
     font-size: max(27px, 4vw);
     text-decoration: none;
     transition: all 0.4s ease;
   }
 
 .contact-row .contact-icons a{
-    background: #1DA1F2;
+    background: var(--btn-bg);
 }
 
 .contact-row .contact-icons a:hover{
-    color: #1DA1F2;
-    background: #ffffff;
+    color: var(--btn-bg);
+    background: var(--bg-primary);
 }
