--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #fffafa;
+    background-color: var(--bg-primary);
     /*background-image: url(../img/background-parallax.png);
     position: relative;
     overflow: hidden;
@@ -33,22 +33,22 @@
 }
 
 .heading-primary {
-    font-size:  calc(1.813rem + 1vw);
+    font-size:  var(--fs-1);
     text-transform: uppercase;
     letter-spacing: 4px;
-    font-weight: 600;
+    font-weight: var(--fw-600);
     text-align: center; 
-    color: #000;
+    color: var(--color-primary);
     margin: 0px;
 }
 
 .heading-primary span{
-    color: #0077B5;
+    color: var(--color-tertiary);
 }
 
 .text-primary {
-    color: #000;
-    font-size:  calc(1.120rem + 0.6vw);
+    color: var(--color-primary);
+    font-size:  var(--fs-2);
     text-align: center;
     line-height: 5vh; 
 }
@@ -59,11 +59,11 @@
 }
 
 .button-contacte {
-    background-color: #0077B5;
+    background-color: var(--btn-bg);
     border: 0 solid #E5E7EB;
     box-sizing: border-box;
-    color: #fff;
-    font-size: calc(1.120rem + 0.6vw);
+    color: var(--color-secondary);
+    font-size: var(--fs-3);
     text-transform: uppercase;
     justify-content: center;
     line-height: 1.75rem;
