--- a/assets/components/_projects.scss
+++ b/assets/components/_projects.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: var(--bg-primary);
+    background-color: $bg-white;
     /*background-image: url(../img/background-parallax.png);
     position: relative;
     overflow: hidden;
@@ -19,38 +19,40 @@
 }
 
 .cards-primary {
-  font-size: var(--fs-2);
+  font-size: $fs-2;
   text-align: center; 
-  color: var(--collor-primary);
+  color: $color-black;
   margin-top: 7vh;
 }
 
 .card-text h2{
-  font-size:  var(--fs-2);
-  color: var(--collor-primary);
+  font-size: $fs-2;
+  color: $color-black;
   text-align: center;
 
 }
 
 .card-text p{
-  color: var(--collor-primary);
-  font-size:  var(--fs-4);
+  color: $color-black;
+  font-size: $fs-4;
   text-align: center;
   margin: 1vh;
   text-align: center;
 }
 
-.card h2{
-    font-size:  var(--fs-4);
+.title {
+    font-size: $fs-4;
     margin-top: 2vh;
-    color: var(--collor-primary);
+    color: $color-black;
 }
 
 .card p{
-    color: #000;
-    font-size: var(--fs-3);
+    color: $color-black;
+    font-size: $fs-3;
+    font-weight: $fw-600;
     text-align: center;
     margin: 1vh;
+    color: $color-white;
 }
 
 .cards-row {
@@ -71,25 +73,24 @@
     align-items: center;
     text-align: center;
     gap: 10px;
-    border-radius: 5%;
+    border-radius: 1%;
     box-shadow: 7px 7px 13px 0px rgba(50, 50, 50, 0.22);
     padding: 10px;
     margin: 20px;
     transition: all 0.3s ease-out;
-    border-bottom: 35px solid #0077B5;
-    background-color: var(--bg-primary);
+    background-color: $bg-white;
   }
   
   .card:hover {
-    transform: translateY(-5px);
-    cursor: pointer;
+    transform: translateY(-7px);
   }
    
   .image-card {
     width: 100%;
+    overflow: hidden;
   }
 
-  .card-text{
+   .card-text{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -97,4 +98,20 @@
     gap: 10px;
     padding: 10px;
     margin: 20px;
+  }
+ 
+  .content {
+    margin: 5px;
+  }
+    
+  .info {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  
+  .btn-project {
+    padding: 5px 20px;
+    border-radius: 2px;
+    background-color: $btn-bg-blue;
   }
