--- a/assets/components/_baseboard.scss
+++ b/assets/components/_baseboard.scss
@@ -1,7 +1,7 @@
 footer{
     padding: 50px 0;
     font-size: 100% ; 
-    background-color: #0077B5;  
+    background-color: $bg-blue;  
 }
 
 footer::before{
@@ -33,7 +33,7 @@ footer .content  .link-boxes{
 
 .box h4{
     font-size: max(16px, 1.2vw);
-    color: #ffffff;
+    color: $color-white;
     margin-bottom: 20px;
     margin-top: 20px;
     font-weight: 500;
@@ -51,9 +51,9 @@ footer .content  .link-boxes{
 .box ul li a{
     font-size: max(14px, 0.8vw);
     text-transform: capitalize;
-    color: #ffffff;
+    color: $color-white;
     text-decoration: none;
-    font-weight: 400;
+    font-weight: $fw-400;
     display: block;
     transition: all 0.3s ease;
 }
@@ -74,8 +74,8 @@ footer .content  .link-boxes{
     font-size: max(14px, 0.8vw);
     outline: none;
     border: 1px solid #ffffff;
-    color: var(--color-secondary);
-    background-color: var(--input-bg);
+    color: $color-white;
+    background-color: $input-bg;
 }
 
 .box .form-sub input::placeholder{
@@ -88,26 +88,26 @@ footer .content  .link-boxes{
     font-size: max(14px, 0.8vw);
     outline: none;
     border: 1px solid #ffffff;
-    color: #ffffff;
-    background-color: var(--input-bg);
+    color: $color-white;
+    background-color: $input-bg;
 }
 
 .box .form-sub textarea::placeholder{
-    color: #ffffff;
+    color: $color-white;
 }
 
 .box .form-sub button{
     width: 100%;
     margin-top: 10px;
     padding: 10px; 
-    font-size: var(--fs-6);
+    font-size: $fs-5;
     outline: none;
     border: none;
     cursor: pointer;
     color: #3c3c3c;
     border-radius: 3px;
     font-weight: bold;
-    background-color: var(--btn-bg-2);
+    background-color: $btn-bg-white;
 }
 
 footer .bottom-details{
@@ -125,9 +125,9 @@ footer .bottom-details .bottom_text{
 
 .bottom-details .bottom_text span, p,
 .bottom-details .bottom_text a{
-    font-size: var(--fs-6);
-    font-weight: var(--fw-400);
-    color: var(--color-secondary);
+    font-size: $fs-5;
+    font-weight: $fw-400;
+    color: $color-white;
     opacity: 0.8;
     text-decoration: none;
 }
@@ -139,16 +139,4 @@ footer .bottom-details .bottom_text{
 
 .bottom-details .bottom_text a{
     margin-right: 10px;
-}
-
-@media (max-width: 800px) {
-    .box{
-        width: 50%;
-        margin-bottom: 30px;
-    }
-}
-@media (max-width:600px) {
-    .box{
-        width: 100%;
-    }
 }
