--- a/assets/components/_contacts.scss
+++ b/assets/components/_contacts.scss
@@ -5,12 +5,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: var(--bg-secondary);
+    background-color: $bg-black;
 }
 
 .heading-contact{
     margin-bottom: 7vh;
-    font-size: var(--fs-2);
+    font-size: $fs-2;
     text-transform: uppercase;
     letter-spacing: 10px;
     text-align: center; 
@@ -41,13 +41,13 @@
 }
 
 .contact-icons h3{
-    color: var(--color-secondary);
-    font-size: var(--fs-4);
+    color: $bg-white;
+    font-size: $fs-4;
 }
 
 .contact-icons p{
-    color: var(--color-secondary);
-    font-size: var(--fs-5);
+    color: $bg-white;
+    font-size: $fs-5;
 }
 
 .contact-icons a{
@@ -56,17 +56,17 @@
     height: max(40px, 6vw);
     border-radius: 50%;
     text-align: center;
-    color: var(--color-secondary);
+    color: $color-white;
     font-size: max(27px, 4vw);
     text-decoration: none;
     transition: all 0.4s ease;
   }
 
 .contact-row .contact-icons a{
-    background: var(--btn-bg);
+    background: $btn-bg-blue;
 }
 
 .contact-row .contact-icons a:hover{
-    color: var(--btn-bg);
-    background: var(--bg-primary);
+    color: $btn-bg-blue;
+    background: $bg-white;
 }
