--- a/assets/components/_responsive.scss
+++ b/assets/components/_responsive.scss
@@ -1,31 +1,4 @@
-:root {
-
-  /** tipografia */
-
-  --fs-1: clamp(1rem, calc(1rem + 2vw), 3.5rem);
-  --fs-2: clamp(1rem, calc(1rem + 1.5vw),  3rem);
-  --fs-3: 1rem;
-  --fs-4: clamp(1rem, calc(1rem + 0.5vw), 1.5rem);
-  --fs-5: clamp(0.8rem, calc(0.6rem + 0.4vw), 1.2rem);
-
-  --fw-400: 400;
-  --fw-600: 600;
-  --fw-700: 700;
-
-  /**   Cores   */
-
-  --bg-primary: #fffafa;
-  --bg-secondary: #171818;
-  --bg-tertiary: #0077B5;
-  --btn-bg: #0077B5;
-  --btn-bg-2: #fff;
-  --input-bg:#3c3c3c;
-  --color-primary: #000;
-  --color-secondary: #fff;
-  --color-tertiary: #0077B5;
-}
-
-/* Responsividade */
+/* media queries */
 
 @media (max-width: 800px) {
     .box {
@@ -76,7 +49,7 @@
     .one,
     .two,
     .three {
-        background-color: #fff;
+        background-color: $bg-white;
         height: 2px;
         width: 60%;
         margin: 5px auto;
@@ -105,7 +78,7 @@
         font-size: max(14px, 1vw);
         gap: 10px;
         margin: 10px 0;
-        color: #ffffff;
+        color: $color-white;
     }
 
     .footer-copy {
