Correção do sublinhado nos botões com pseudo-elemento

--- a/assets/components/_colors.scss
+++ b/assets/components/_colors.scss
@@ -14,4 +14,4 @@ $input-bg: #3c3c3c;
 $color-black: #000000;
 $color-white: #ffffff;
 $color-blue: #0077B5;
-$color-red: #CC3300;
+$color-red: #ff5902;
