--- a/assets/components/_projects.scss
+++ b/assets/components/_projects.scss
@@ -25,6 +25,17 @@
   margin-top: 7vh;
 }
 
+.heading-borders {
+	text-align: center;
+	justify-content: center;
+	display: flex;
+}
+.heading-borders span {
+	border: 2px solid $color-blue;
+	width: 70%;
+	margin-bottom: 20px;
+}
+
 .card-text h2{
   font-size: $fs-2;
   color: $color-black;
