--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -10,11 +11,6 @@
 .header {
   background-color: #0077B5;
   padding: 30px 0;
-}
-
-.header-logo {
-  width: 3%;
-  filter: invert(100%);
 }
 
 .logo-responsive {
@@ -38,11 +34,22 @@
   font-weight: 600;
   font-size: var(1rem);
   padding: 10px;
+  position: relative;
 }
 
-.header-menu-item:hover {
-  opacity: 1;
-  text-decoration: underline;
+.header-menu-item::after {
+  content: "";
+  display: block;
+  width: 0;
+  border-bottom: 2px solid #ff5902; /* Definir a cor e a espessura do sublinhado */
+  position: absolute;
+  bottom: -2px; /* Ajuste a posição vertical do sublinhado */
+  left: 0;
+  transition: width 0.3s; /* Adicionar uma transição para animar o sublinhado */
+}
+
+.header-menu-item:hover::after {
+  width: 100%; /* Expandir o sublinhado no hover */
 }
 
 .btn-outline {
@@ -70,7 +77,7 @@
 
 .logo a {
   color: #ffffff;
-  font-size: 1rem;
+  font-size: clamp(1rem, 1rem + 0.5vw, 1.5rem);
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -78,9 +85,9 @@
 }
 
 .logo span {
-  font-size: 1rem;
+  font-size: clamp(1rem, 1rem + 0.5vw, 1.5rem);
   display: inline-block;
-  color: #CC3300;
+  color: #ff5902;
   margin-left: 2px;
 }
 
@@ -201,7 +208,7 @@
 }
 
 .heading-skills {
-  font-size: clamp(1rem, 1rem + 2vw, 3.5rem);
+  font-size: clamp(1rem, 1rem + 1.5vw, 3rem);
   text-transform: uppercase;
   letter-spacing: 10px;
   text-align: center;
@@ -269,6 +276,18 @@
   text-align: center;
   color: #000000;
   margin-top: 7vh;
+}
+
+.heading-borders {
+  text-align: center;
+  justify-content: center;
+  display: flex;
+}
+
+.heading-borders span {
+  border: 2px solid #0077B5;
+  width: 70%;
+  margin-bottom: 20px;
 }
 
 .card-text h2 {
@@ -716,6 +735,9 @@ footer .bottom-details .bottom_text {
   }
   .offer > div {
     flex: 1 1 80px;
+  }
+  .heading-skills h2 span {
+    display: block;
   }
 }
 .offer-item,
