--- a/assets/components/_projects.scss
+++ b/assets/components/_projects.scss
@@ -71,7 +71,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     max-width: 1300px;
-    margin: 7vh 0 7vh 0;
+    margin: 7vh 0;
 }
 
   .cards-row > div{
