--- a/styles.scss
+++ b/styles.scss
@@ -45,3 +45,11 @@ a{
     cursor: pointer;
     text-decoration: none;
 }
+
+textarea{
+    font-family: 'Dosis', sans-serif;
+}
+
+input{
+    font-family: 'Dosis', sans-serif;
+}
