--- a/assets/components/_baseboard.scss
+++ b/assets/components/_baseboard.scss
@@ -32,7 +32,7 @@ footer .content  .link-boxes{
 }
 
 .box h4{
-    font-size: max(16px, 1.2vw);
+    font-size: $fs-4;
     color: $color-white;
     margin-bottom: 20px;
     margin-top: 20px;
@@ -49,7 +49,7 @@ footer .content  .link-boxes{
 }
 
 .box ul li a{
-    font-size: max(14px, 0.8vw);
+    font-size: $fs-3;
     text-transform: capitalize;
     color: $color-white;
     text-decoration: none;
@@ -71,7 +71,7 @@ footer .content  .link-boxes{
 .box .form-sub input{
     width: 100%;
     padding: 10px;
-    font-size: max(14px, 0.8vw);
+    font-size: $fs-5;
     outline: none;
     border: 1px solid #ffffff;
     color: $color-white;
@@ -85,7 +85,7 @@ footer .content  .link-boxes{
 .box .form-sub textarea{
     width: 100%;
     padding: 10px;
-    font-size: max(14px, 0.8vw);
+    font-size: $fs-5;
     outline: none;
     border: 1px solid #ffffff;
     color: $color-white;
