--- a/assets/components/_contacts.scss
+++ b/assets/components/_contacts.scss
@@ -24,14 +24,12 @@
     gap: 10vw;
     flex-wrap: wrap;
     width: 75vw;
-    margin: 7vh 0 7vh 0;
+    margin: 7vh 0;
 }
 
 .contact-row > div{
     flex: 1 1 70px;
-  }
-
-
+}
 
 .contact-icons{
     display: flex;
@@ -60,6 +58,14 @@
     font-size: max(27px, 4vw);
     text-decoration: none;
     transition: all 0.4s ease;
+  }
+
+  .contact-icons i {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100%;
+    height: 100%;
   }
 
 .contact-row .contact-icons a{
